--- a/config/myConfig-develop.properties
+++ b/config/myConfig-develop.properties
@@ -1,3 +1,3 @@
-mysql.host=http://mysql-dev-refresh.host
-redis.host=http://redis-dev-refresh.host
-mongo.host=http://mongo-dev-refresh.host
+mysql.host=http://mysql-dev.host
+redis.host=http://redis-dev.host
+mongo.host=http://mongo-dev.host
